# data-designer-rubrify

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/data_designer_rubrify/: __init__.py  config.py  generator.py
tests/: smoke_test.py
