[project]
name = "data-designer-rubrify"
version = "0.1.0"
description = "DataDesigner plugin that integrates Rubrify rubric-based evaluation as a column generator"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "rubrify>=0.1.4",
    "data-designer-config",
    "data-designer-engine",
]

[project.entry-points."data_designer.plugins"]
rubrify = "data_designer_rubrify:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_designer_rubrify"]
